syntax="proto3";

package calculator;

option go_package="github.com/vallarasuSJ/grpc_go_course/calculator/proto";

message FibRequest{
    int32 fibNumber=1;
}

message FibResponse{
    int32 result=1;
}